--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,8 @@
   "dependencies": {
     "jquery": "1.12",
     "normalize-css": "normalize.css#~3.0.3"
+  },
+  "devDependencies": {
+    "html5shiv": "~3.7.3"
   }
 }
