--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "WP-1",
   "dependencies": {
     "jquery": "1.12",
-    "normalize-css": "normalize.css#~3.0.3"
+    "normalize-css": "normalize.css#~3.0.3",
+    "bPopup": "bpopup#~0.11.0"
   },
   "devDependencies": {
     "html5shiv": "~3.7.3"
